# meen

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  ReleaseNotes.md  Welcome.txt  conanfile.py  conanfile.txt
.github/workflows/: main.yml
Base/: CMakeLists.txt
Base/include/Base/: Base.h
Base/module/: Base.ixx  CoRoutineHelper.ixx
Base/msbuild/: Base.vcxitems
CMakeIncludes/: addTarget.cmake  stdModules.cmake
Controller/: CMakeLists.txt
Controller/include/Controller/: IController.h
Controller/module/: Controller.ixx  ControllerFactory.ixx  IController.ixx  IMemoryController.ixx  MemoryController.ixx
Controller/msbuild/: Controller.vcxproj
Controller/source/: Controller.cpp  ControllerFactory.cpp
Cpu/: CMakeLists.txt
Cpu/include/Cpu/: 8080.h  CpuFactory.h  ICpu.h
Cpu/module/: 8080.ixx  CpuFactory.ixx  ICpu.ixx
Cpu/msbuild/: Cpu.vcxproj
Cpu/source/: 8080.cpp  CpuFactory.cpp
CpuClock/: CMakeLists.txt
CpuClock/include/CpuClock/: CpuClock.h  CpuClockFactory.h  ICpuClock.h
CpuClock/module/: CpuClock.ixx  CpuClockFactory.ixx  ICpuClock.ixx
CpuClock/msbuild/: CpuClock.vcxproj
CpuClock/source/: CpuClock.cpp  CpuClockFactory.cpp
Docs/: Acknowledgements.txt  Building a Release.txt  Changelog.txt  Doxyfile  License.txt
Machine/: CMakeLists.txt
Machine/include/Machine/: IMachine.h  Machine.h  MachineFactory.h
Machine/module/: IMachine.ixx  Machine.ixx  MachineFactory.ixx
Machine/msbuild/: Machine.vcxproj
Machine/resource/: Machine.rc  resource.h
Machine/source/: Machine.cpp  MachineFactory.cpp
MachinePy/: CMakeLists.txt
MachinePy/include/MachinePy/: ControllerPy.h  MachineHolder.h
MachinePy/source/: ControllerPy.cpp  MachineHolder.cpp  MachineModule.cpp
Opt/: CMakeLists.txt
Opt/include/Opt/: Opt.h
Opt/source/: Opt.cpp
Sdk/: CMakeLists.txt
Sdk/msbuild/: Sdk.vcxproj
Sdk/script/: build.bat
SystemBus/: CMakeLists.txt
SystemBus/include/SystemBus/: SystemBus.h
SystemBus/module/: SystemBus.ixx
SystemBus/msbuild/: SystemBus.vcxitems
Tests/: CMakeLists.txt  pythonTestDeps.cmake
Tests/8080Test/msbuild/: 8080Test.vcxproj
Tests/8080Test/source/: 8080Test.cpp
Tests/ConanPackageTest/: CMakeLists.txt  conanfile.py
Tests/ConanPackageTest/source/: MachEmuPackageTest.cpp  MachEmuPackageTest.py
Tests/ControllerTest/: CMakeLists.txt
Tests/ControllerTest/msbuild/: ControllerTest.vcxproj
Tests/ControllerTest/source/: ControllerTest.cpp
Tests/CpuClockTest/msbuild/: CpuClockTest.vcxproj
Tests/CpuClockTest/source/: CpuClockTest.cpp
Tests/MachineTest/: CMakeLists.txt  pythonTestDeps.cmake
Tests/MachineTest/msbuild/: MachineTest.vcxproj
Tests/MachineTest/source/: 8080Test.cpp  MachineTest.cpp  test_Machine.py
Tests/Programs/: cpudiag_readme.txt
Tests/SystemBusTest/msbuild/: SystemBusTest.vcxproj
Tests/SystemBusTest/source/: SystemBusTest.cpp
Tests/TestControllers/: CMakeLists.txt
Tests/TestControllers/include/TestControllers/: BaseIoController.h  CpmIoController.h  MemoryController.h  TestIoController.h
Tests/TestControllers/module/: BaseIoController.ixx  ControllerFactory.ixx  CpmIoController.ixx  MemoryController.ixx  TestIoController.ixx
Tests/TestControllers/source/: BaseIoController.cpp  BaseIoController.py  ControllerFactory.cpp  CpmIoController.cpp  CpmIoController.py  MemoryController.cpp  MemoryController.py  TestIoController.cpp  TestIoController.py
Tests/TestControllersPy/: CMakeLists.txt
Tests/TestControllersPy/source/: TestControllersPy.cpp
Tests/conan_package_test/: conanfile.py
Tests/include/test_controllers/: BaseIoController.h  CpmIoController.h  MemoryController.h
Tests/source/test_controllers/: CpmIoController.py  MemoryController.cpp
Tests/source/test_controllers_py/: TestControllersPy.cpp
Tools/: arm-linux-gnueabihf.cmake
Utils/: CMakeLists.txt
Utils/include/Utils/: Utils.h  base64.hpp
Utils/source/: Utils.cpp  md5.c
Windows/: SpaceInvaders.sln  machemu.sln
docs/: Doxyfile  meenRefHeader.tex
include/meen/: Base.h  Error.h  IController.h  IMachine.h  MEEN_Error.h  MachineFactory.h
include/meen/clock/: CpuClock.h  CpuClockFactory.h  ICpuClock.h
include/meen/cpu/: 8080.h  CpuFactory.h  ICpu.h
include/meen/machine/: Machine.h
include/meen/machine_py/: ControllerPy.h  MachineHolder.h
include/meen/opt/: Opt.h
include/meen/utils/: ErrorCode.h  Utils.h
profiles/: raspberry-32  raspberry-64
source/: MEEN_Error.cpp
source/clock/: CpuClock.cpp  CpuClockFactory.cpp
source/cpu/: 8080.cpp  CpuFactory.cpp
source/machine/: Machine.cpp  MachineFactory.cpp
source/machine_py/: ControllerPy.cpp  MachineHolder.cpp  MachineModule.cpp
source/opt/: Opt.cpp
source/utils/: ErrorCode.cpp  Utils.cpp
tests/: pythonTestDeps.cmake
tests/conan_package_test/: CMakeLists.txt  conanfile.py
tests/conan_package_test/source/: MachEmuPackageTest.cpp  MeenPackageTest.cpp  MeenPackageTest.py
tests/include/test_controllers/: BaseIoController.h  CpmIoController.h  MemoryController.h  TestIoController.h
tests/source/meen_test/: 8080Test.cpp  MachineTest.cpp  MeenGTest.cpp  MeenUnityTest.cpp  test_Machine.py
tests/source/test_controllers/: BaseIoController.cpp  BaseIoController.py  CpmIoController.cpp  CpmIoController.py  MemoryController.cpp  MemoryController.py  RP2040MemoryController.cpp  TestIoController.cpp  TestIoController.py  TestPrograms.S
tests/source/test_controllers_py/: TestControllersPy.cpp
